--- a/styles1.css
+++ b/styles1.css
@@ -1,74 +1,66 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
   }
   
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
+  .code-container {
+    margin-top: 20px;
   }
-  
-  h1 {
-    margin: 0;
-  }
-  
-  nav {
-    background-color: #f9f9f9;
-    padding: 10px;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  main {
-    max-width: 1000px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    color: #333;
-  }
-  
-  p {
-    margin-bottom: 15px;
-  }
-  
-  section {
-    margin-bottom: 30px;
-  }
-  
-  /* Additional Styles */
-  
-  #introduction {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 5px;
-  }
-  
-  #why-dsa {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
+ 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content .dropdown-item {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+
+.dropdown-content .dropdown-item:hover {
+  background-color: #f9f9f9;
+}
+
+ 
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: justify;
+}
+
+.code-container {
+  margin-top: 20px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  white-space: pre-wrap;
+  font-family: monospace;
+  background-color: #f9f9f9;
+}
   
